@@ -40,5 +40,5 @@ extern void write_typedef(type_t *type, var_t *names);
 extern void write_expr(FILE *h, expr_t *e);
 extern void write_constdef(var_t *v);
 extern void write_externdef(var_t *v);
-
+extern var_t* get_explicit_handle_var(func_t* func);
 #endif
